[gd_scene load_steps=20 format=3 uid="uid://bsgcsi7jvwvd7"]

[ext_resource type="Script" path="res://script/box_fourth_dice_6.gd" id="1_uqydb"]
[ext_resource type="Texture2D" uid="uid://bs6awbyjolfj0" path="res://assets/sheet/de_spritesheet.png" id="2_5uqg5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2guts"]
atlas = ExtResource("2_5uqg5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck50f"]
atlas = ExtResource("2_5uqg5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8by3r"]
atlas = ExtResource("2_5uqg5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80hdg"]
atlas = ExtResource("2_5uqg5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7psl"]
atlas = ExtResource("2_5uqg5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v2it"]
atlas = ExtResource("2_5uqg5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88blm"]
atlas = ExtResource("2_5uqg5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpa66"]
atlas = ExtResource("2_5uqg5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pabck"]
atlas = ExtResource("2_5uqg5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lqcn"]
atlas = ExtResource("2_5uqg5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okd3i"]
atlas = ExtResource("2_5uqg5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbtlh"]
atlas = ExtResource("2_5uqg5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmrg5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2guts")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck50f")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8by3r")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80hdg")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7psl")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v2it")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88blm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpa66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pabck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lqcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbtlh")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvn2m"]
size = Vector2(30, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqpu4"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yk1j8"]
size = Vector2(28.5715, 31.4286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2tu3"]
size = Vector2(28.5714, 31.4286)

[node name="box_fourth_dice6" type="Node2D"]
z_index = 4
scale = Vector2(0.35, 0.35)
script = ExtResource("1_uqydb")

[node name="dice" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vmrg5")
animation = &"idle"
autoplay = "idle"
frame = 4
frame_progress = 0.528626

[node name="area_roll_dice4" type="Area2D" parent="."]
collision_layer = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_roll_dice4"]
position = Vector2(0, 22.5)
shape = SubResource("RectangleShape2D_rvn2m")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 115

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_eqpu4")

[node name="area_roll_dice4_left" type="Area2D" parent="."]
collision_layer = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_roll_dice4_left"]
z_index = 3
position = Vector2(-28.5714, 4.28571)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_yk1j8")

[node name="area_roll_dice4_right" type="Area2D" parent="."]
collision_layer = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_roll_dice4_right"]
z_index = 3
position = Vector2(31.4286, 4.28571)
shape = SubResource("RectangleShape2D_g2tu3")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="body_entered" from="area_roll_dice4" to="." method="_on_area_roll_dice_4_body_entered"]
[connection signal="body_entered" from="area_roll_dice4_left" to="." method="_on_area_roll_dice_4_left_body_entered"]
[connection signal="body_exited" from="area_roll_dice4_left" to="." method="_on_area_roll_dice_4_left_body_exited"]
[connection signal="body_entered" from="area_roll_dice4_right" to="." method="_on_area_roll_dice_4_right_body_entered"]
[connection signal="body_exited" from="area_roll_dice4_right" to="." method="_on_area_roll_dice_4_right_body_exited"]
